mogodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
  labels:
    app: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mogodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: "/data/db"
      volumes:
      - name: mongodb-data #need not to match in Volumemounts
        persistentVolumeClaim:
          claimName: mongodb-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017         # The port exposed by the service itself
      targetPort: 27017 # The actual port the application container is listening on
