mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongoexpress
spec:
  selector:
    matchLabels:
      app: mongoexpress
  replicas: 1
  template:
    metadata:
      labels:
        app: mongoexpress
    spec:
      containers:
      - name: mongoexpress
        image: mongo-express
        ports:
        - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongoexpress
  #type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081         # The port exposed by the service itself
      targetPort: 8081 # The actual port the application container is listening on
      #nodePort: 30000
